# -my-repo

./: README.md  build_web.bat
.github/workflows/: android.yml  deploy-pages.yml  desktop.yml  hello.yml  pages.yml  quiz1-android.yml  quiz1-desktop.yml  quiz3-android.yml  quiz3-desktop.yml
Assignment-2-3DFan/: .gitignore  CMakeLists.txt  build_web.sh  script_build_and_run.bat
Assignment-2-3DFan/Scene/: Fan.cpp  Platform.h  ShaderHelper.h
Assignment-2-3DFan/android/: settings.gradle
Assignment-2-3DFan/android/app/src/main/: AndroidManifest.xml
Assignment-2-3DFan/android/app/src/main/assets/shader/: FanFragment.glsl
Assignment-2-3DFan/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Assignment-2-3DFan/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
Assignment-2-3DFan/android/app/src/main/res/values/: strings.xml
Quiz-3-Project/: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_web.sh  index.html
Quiz-3-Project/Scene/: Fan.cpp  Fan.h  Ground.cpp  Ground.h  Model.h  Renderer.cpp  Renderer.h  Scene3D.cpp  Scene3D.h  SceneHUD.cpp  SceneHUD.h  main.cpp
Quiz-3-Project/android/: settings.gradle
Quiz-3-Project/android/app/: build.gradle
Quiz-3-Project/android/app/src/main/: AndroidManifest.xml
Quiz-3-Project/android/app/src/main/assets/shader/: FanFragment.glsl  FanVertex.glsl  GroundFragment.glsl  GroundVertex.glsl  HUDFragment.glsl  HUDVertex.glsl  TriangleFragment.glsl  TriangleVertex.glsl
Quiz-3-Project/android/app/src/main/cpp/: CMakeLists.txt
Quiz-3-Project/android/app/src/main/cpp/Scene/: Model.h  Renderer.cpp  ShaderHelper.h  Triangle.cpp  Triangle.h
Quiz-3-Project/android/app/src/main/res/values/: strings.xml  themes.xml
Quiz-3-Project/cmake/: ImportDependencies.cmake
Quiz1/3-HelloWorldOpenGLES-JNI-Android-PC-WebGL-CrossPlatform/: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_web.sh  script_build_and_run.bat
Quiz1/3-HelloWorldOpenGLES-JNI-Android-PC-WebGL-CrossPlatform/Scene/: Model.h  Renderer.cpp  Renderer.h  ShaderHelper.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
Quiz1/3-HelloWorldOpenGLES-JNI-Android-PC-WebGL-CrossPlatform/android/app/src/main/assets/shader/: SquareFragment.glsl  SquareVertex.glsl
Quiz1/3-HelloWorldOpenGLES-JNI-Android-PC-WebGL-CrossPlatform/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Scene/: Fan.h  Renderer.cpp  Renderer.h  main.cpp
android/app/: build.gradle
android/app/src/main/assets/shader/: FanVertex.glsl
android/app/src/main/cpp/Scene/: Renderer.h
(+1 files in other folders)
